feat: Enhance session management and permissions in MesaController
- Updated cerrarSesion method to include user authentication and admin checks.
- Modified MesaDTO to include meseroId and meseroNombre for better context.
- Enhanced PedidoService to enforce permissions based on user roles when creating and managing orders.
- Updated PedidoController to handle user authentication and permissions for creating and managing orders.
- Refactored ProveedorEntity to include additional fields for better supplier management.
- Improved ProveedorJpaRepo to sort by razonSocial instead of nombre.
- Enhanced ProveedoresController with validation and copying logic for supplier updates.
- Added detailed reporting capabilities in ReportesController for better order tracking.
- Updated InsumoEntity to include category and expiration date for inventory management.
- Enhanced StockController to validate category and expiration date during insumo creation and updates.
- Added unit tests for CajaService and PedidoService to ensure proper functionality and permission handling.
- Created a new SQL migration script for database adjustments, including adding columns and indexes.